--- a/PAGES/tools.html
+++ b/PAGES/tools.html
@@ -10,7 +10,7 @@
 
   <!--BOOTSTRAP & CSS INCICIO----------------------------------------------------------------------------------------->
 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../CSS/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
