--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!--BOOTSTRAP & CSS START----------------------------------------------------------------------------------------->
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="stylesheet" href="./CSS/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
