--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -27,7 +27,7 @@
 
     <nav class="top">
         <div class="header">
-            <label class="logo">Alma Digital</label>
+            <label class="logo">Alma<span>Digital</span></label>
             <div class="header-right">
                 <ul class="topUl">
                     <li><a href="../index.html">HOME</a></li>
