--- a/PAGES/portafolio.html
+++ b/PAGES/portafolio.html
@@ -10,12 +10,12 @@
 
   <!--BOOTSTRAP & CSS INCICIO----------------------------------------------------------------------------------------->
 
-  <link rel="stylesheet" href="../CSS/styles.css">
+  <link rel="stylesheet" href="../CSS/owl.carousel.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="../CSS/owl.carousel.css">
+  <link rel="stylesheet" href="../CSS/styles.css">
 
 
   <!--BOOTSTRAP & CSS FINAL----------------------------------------------------------------------------------------->
@@ -63,7 +63,7 @@
       <!-- PROYECTO 1-->
       <div class="ms-2 me-2">
         <div class="card">
-          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../ASSETS/1.jpg" alt="">
+          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/1.jpg" alt="">
           <div class="card-body">
             <h4 class="card-text">PROYECTO 1</h4>
             <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
@@ -90,7 +90,7 @@
       <!-- PROYECTO 2-->
       <div class="ms-2 me-2">
         <div class="card">
-          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../ASSETS/2.jpg" alt="">
+          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/2.jpg" alt="">
           <div class="card-body">
             <h4 class="card-text">PROYECTO 2</h4>
             <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
@@ -117,7 +117,7 @@
       <!-- PROYECTO 3-->
       <div class="ms-2 me-2">
         <div class="card">
-          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../ASSETS/3.jpg" alt="">
+          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/3.jpg" alt="">
           <div class="card-body">
             <h4 class="card-text">PROYECTO 3</h4>
             <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
@@ -144,7 +144,7 @@
       <!-- PROYECTO 4-->
       <div class="ms-2 me-2">
         <div class="card">
-          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../ASSETS/4.jpg" alt="">
+          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/4.jpg" alt="">
           <div class="card-body">
             <h4 class="card-text">PROYECTO 4</h4>
             <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
@@ -171,7 +171,7 @@
       <!-- PROYECTO 5-->
       <div class="ms-2 me-2">
         <div class="card">
-          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../ASSETS/5.jpg" alt="">
+          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/5.jpg" alt="">
           <div class="card-body">
             <h4 class="card-text">PROYECTO 5</h4>
             <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
@@ -198,7 +198,7 @@
       <!-- PROYECTO 6-->
       <div class="ms-2 me-2">
         <div class="card">
-          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../ASSETS/6.jpg" alt="">
+          <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/6.jpg" alt="">
           <div class="card-body">
             <h4 class="card-text">PROYECTO 6</h4>
             <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
@@ -274,8 +274,8 @@
   <!--------------------------------------------------------------------------------------------------------------------------->
 
   <!-- BOOTSTRAP JS START -->
-  <script src="../JS/jquery.js"></script>
-  <script src="../JS/owl_carousel.js"></script>
+  <script src="../js/jquery.js"></script>
+  <script src="../js/owl_carousel.js"></script>
   <!-- BOOTSTRAP JS END -->
   <!--------------------------------------------------------------------------------------------------------------------------->
 
