--- a/PAGES/servicios.html
+++ b/PAGES/servicios.html
@@ -10,12 +10,11 @@
 
   <!--BOOTSTRAP & CSS INCICIO----------------------------------------------------------------------------------------->
 
-  <link rel="stylesheet" href="../CSS/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="../CSS/owl.carousel.css">
+  <link rel="stylesheet" href="../css/styles.css">
 
 
   <!--BOOTSTRAP & CSS FINAL----------------------------------------------------------------------------------------->
@@ -60,7 +59,7 @@
 
 
         <div class="col-md order-1 order-md-2">
-          <img src="../ASSETS/A.jpg" class="img-fluid" alt="">
+          <img src="../assets/A.jpg" class="img-fluid" alt="">
         </div>
 
 
@@ -120,7 +119,7 @@
 
     <div class="container-servicios ">
       <!-- <div class='banner-img'></div> -->
-      <img src='../ASSETS/branding.jpg' alt='profile image' class="img-servicios">
+      <img src='../assets/branding.jpg' alt='profile image' class="img-servicios">
       <h1 class="name">BRANDING</h1>
       <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ducimus. Architecto
         error nobis exercitationem facilis ullam. Obcaecati itaque hic maiores.</p>
@@ -131,7 +130,7 @@
 
     <div class="container-servicios ">
       <div class='banner-img'></div>
-      <img src='../ASSETS/front_end.jpg' alt='profile image' class="img-servicios">
+      <img src='../assets/front_end.jpg' alt='profile image' class="img-servicios">
       <h1 class="name">FRONTEND</h1>
       <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ducimus. Architecto
         error nobis exercitationem facilis ullam. Obcaecati itaque hic maiores.</p>
@@ -142,7 +141,7 @@
 
     <div class="container-servicios ">
       <div class='banner-img'></div>
-      <img src='../ASSETS/UX.jpg' alt='profile image' class="img-servicios">
+      <img src='../assets/UX.jpg' alt='profile image' class="img-servicios">
       <h1 class="name">DISEÑO UX/UI</h1>
       <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ducimus. Architecto
         error nobis exercitationem facilis ullam. Obcaecati itaque hic maiores.</p>
@@ -152,7 +151,7 @@
 
     <div class="container-servicios ">
       <div class='banner-img'></div>
-      <img src='../ASSETS/mas.jpg' alt='profile image' class="img-servicios">
+      <img src='../assets/mas.jpg' alt='profile image' class="img-servicios">
       <h1 class="name">MAS</h1>
       <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ducimus. Architecto
         error nobis exercitationem facilis ullam. Obcaecati itaque hic maiores.</p>
