--- a/PAGES/tools.html
+++ b/PAGES/tools.html
@@ -10,11 +10,11 @@
 
   <!--BOOTSTRAP & CSS INCICIO----------------------------------------------------------------------------------------->
 
-  <link rel="stylesheet" href="../CSS/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/styles.css">
 
   <!--BOOTSTRAP & CSS FINAL----------------------------------------------------------------------------------------->
 
@@ -68,7 +68,7 @@
 
     <div class="row">
       <div class="col-lg-6">
-        <img src="../ASSETS/desktop.jpg" alt="" class="img-thumbnail">
+        <img src="../assets/desktop.jpg" alt="" class="img-thumbnail">
       </div>
 
       <div class="col-lg-6">
