--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <!--BOOTSTRAP & CSS INCICIO----------------------------------------------------------------------------------------->
 
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!--BOOTSTRAP & CSS FINAL----------------------------------------------------------------------------------------->
 
@@ -43,7 +43,7 @@
             <li class="SERVICIOS"><a href="./pages/servicios.html"><i class="fas fa-book"></i></a></li>
             <li class="TOOLS"><a href="./pages/tools.html"><i class="fa-solid fa-tools"></i></a></li>
             <li class="HOME"><a href="index.html"><i class="fas fa-home"></i></a></li>
-            <li class="PORTAFOLIO"><a href="./PAGES/portafolio.html"><i class="fas fa-code"></i></a></li>
+            <li class="PORTAFOLIO"><a href="./pages/portafolio.html"><i class="fas fa-code"></i></a></li>
             <li class="CONTACTO"><a href="./pages/contacto.html"><i class="fas fa-message"></i></a></li>
         </ul>
     </nav>
@@ -58,7 +58,7 @@
         <div class="container-home">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md order-2 order-md-1">
-                    <img src="./ASSETS/B.webp" class="img-fluid" alt="">
+                    <img src="./assets/" class="img-fluid" alt="">
                 </div>
                 <div class="col-md text-center p-5 order-1 order-md-2">
                     <h1>Hola<span>,</span> soy Aminta<span>!</span></h1>
@@ -70,7 +70,7 @@
                         consectetur numquam iusto nam itaque autem adipisci! Lorem ipsum dolor sit amet consectetur
                         adipisicing elit. Modi illum recusandae, voluptatum explicabo expedita veritatis magni debitis
                         possimus ipsum ab?</p>
-                    <button class="btn-home" href="./PAGES/contacto.html">CONTACTAME</button>
+                    <button class="btn-home" href="./pages/contacto.html">CONTACTAME</button>
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
                     <button class="btn-home">Download CV <i class="fa-solid fa-download"></i></button>
                 </div>
                 <div class="col-md ">
-                    <img src="./ASSETS/A.jpg" class="img-fluid" alt="">
+                    <img src="./assets/A.jpg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
