Extend+BEM en Botones

--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -94,8 +94,10 @@
                         <label>Cuentanos sobre tu idea o negocio</label>
                         <textarea name="message" rows="5"></textarea>
                     </p>
-                    <p class="full">
-                        <button>Submit</button>
+                    <p class="full border-0">
+                        <!-- <button class="boton--enviar">Enviar</button> -->
+                        <button class="boton--contacto">Enviar</button>
+
                     </p>
                 </form>
             </div>
