--- a/PAGES/servicios.html
+++ b/PAGES/servicios.html
@@ -68,7 +68,7 @@
           <p class="lead my-4 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet minima
             tempora expedita? Ullam
             sed totam voluptates ea adipisci distinctio laborum?</p>
-          <button id="btn" class="btn btn-lg" type="button" data-bs-toggle="modal"
+          <button class="boton" type="button" data-bs-toggle="modal"
             data-bs-target="#modal">¡Contactanos!</button>
         </div>
 
