--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container-home">
             <div class="row align-items-center justify-content-between">
                 <div class="col-md order-2 order-md-1">
-                    <img src="./assets/" class="img-fluid" alt="">
+                    <img src="./assets/B.webp" class="img-fluid" alt="">
                 </div>
                 <div class="col-md text-center p-5 order-1 order-md-2">
                     <h1>Hola<span>,</span> soy Aminta<span>!</span></h1>
@@ -70,7 +70,7 @@
                         consectetur numquam iusto nam itaque autem adipisci! Lorem ipsum dolor sit amet consectetur
                         adipisicing elit. Modi illum recusandae, voluptatum explicabo expedita veritatis magni debitis
                         possimus ipsum ab?</p>
-                    <button class="btn-home" href="./pages/contacto.html">CONTACTAME</button>
+                    <button class="boton" href="./pages/contacto.html">CONTACTAME</button>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nesciunt ullam tempore
                         cumque, aperiam cum nostrum exercitationem quaerat enim quos voluptatem fugit eligendi
                         consectetur numquam iusto nam itaque autem adipisci!</p>
-                    <button class="btn-home">Download CV <i class="fa-solid fa-download"></i></button>
+                    <button class="boton">Curriculum <i class="fa-solid fa-download"></i></button>
                 </div>
                 <div class="col-md ">
                     <img src="./assets/A.jpg" class="img-fluid" alt="">
