--- a/PAGES/portafolio.html
+++ b/PAGES/portafolio.html
@@ -185,13 +185,12 @@
             <p class="card-text mt-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum harum nam
               asperiores.
             </p>
-
-            <div class="d-flex justify-content-between align-items-center mt-2">
+            <button class='boton--portafolio'>Demo</button>
+            <!-- <div class="d-flex justify-content-between align-items-center mt-2">
               <div class="btn-group">
-                <a class="btn btn-sm btn-outline-secondary border-2">DEMO</a>
-                <a class="btn btn-sm btn-outline-secondary border-2">ABOUT</a>
+                <button class='boton-portafolio'>Demo</button>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -215,8 +214,8 @@
 
             <div class="d-flex justify-content-between align-items-center mt-2">
               <div class="btn-group">
-                <a class="btn btn-sm btn-outline-secondary border-2">DEMO</a>
-                <a class="btn btn-sm btn-outline-secondary border-2">ABOUT</a>
+                <button class="boton">Demo</button>
+
               </div>
             </div>
           </div>
