--- a/PAGES/portafolio.html
+++ b/PAGES/portafolio.html
@@ -78,12 +78,7 @@
               asperiores.
             </p>
 
-            <div class="d-flex justify-content-between align-items-center mt-2">
-              <div class="btn-group">
-                <a class="btn btn-sm btn-outline-secondary border-2">DEMO</a>
-                <a class="btn btn-sm btn-outline-secondary border-2">ABOUT</a>
-              </div>
-            </div>
+            <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
       </div>
@@ -105,12 +100,7 @@
               asperiores.
             </p>
 
-            <div class="d-flex justify-content-between align-items-center mt-2">
-              <div class="btn-group">
-                <a class="btn btn-sm btn-outline-secondary border-2">DEMO</a>
-                <a class="btn btn-sm btn-outline-secondary border-2">ABOUT</a>
-              </div>
-            </div>
+            <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
       </div>
@@ -132,12 +122,7 @@
               asperiores.
             </p>
 
-            <div class="d-flex justify-content-between align-items-center mt-2">
-              <div class="btn-group">
-                <a class="btn btn-sm btn-outline-secondary border-2">DEMO</a>
-                <a class="btn btn-sm btn-outline-secondary border-2">ABOUT</a>
-              </div>
-            </div>
+            <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
       </div>
@@ -159,12 +144,7 @@
               asperiores.
             </p>
 
-            <div class="d-flex justify-content-between align-items-center mt-2">
-              <div class="btn-group">
-                <a class="btn btn-sm btn-outline-secondary border-2">DEMO</a>
-                <a class="btn btn-sm btn-outline-secondary border-2">ABOUT</a>
-              </div>
-            </div>
+            <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
       </div>
@@ -181,16 +161,10 @@
             <i class="js fa-brands fa-js"></i>
             <i class="sass fa-brands fa-sass"></i>
 
-
             <p class="card-text mt-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum harum nam
               asperiores.
             </p>
             <button class='boton--portafolio'>Demo</button>
-            <!-- <div class="d-flex justify-content-between align-items-center mt-2">
-              <div class="btn-group">
-                <button class='boton-portafolio'>Demo</button>
-              </div>
-            </div> -->
           </div>
         </div>
       </div>
@@ -212,12 +186,7 @@
               asperiores.
             </p>
 
-            <div class="d-flex justify-content-between align-items-center mt-2">
-              <div class="btn-group">
-                <button class="boton">Demo</button>
-
-              </div>
-            </div>
+            <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
       </div>
@@ -229,14 +198,14 @@
   <!--------------------------------------------------------------------------------------------------------------------------->
 
   <!-- NEWSLETTER START -->
-  <section class="newsletter text-light p-4">
+  <section class="newsletter text-light py-0 ">
     <div class="container">
       <div class="d-md-flex justify-content-between align-items-baseline">
-        <h3 class="col-6 mb-3 mb-md-0 d-none d-md-block fs-3">¿Quieres saber más sobre nuestros proyectos??</h3>
+        <h3 class="col-6 mb-3 mb-md-0 d-none d-md-block fs-4">¿Quieres saber más sobre nuestros proyectos??</h3>
 
         <div class="input-group news-input m-2">
           <input type="text" class="form-control" placeholder="Suscríbete para nuestro newsletter">
-          <button class="btn btn-secondary btn-outline-secondary text-light btn-lg" type="button">Suscríbete!</button>
+          <button class="btn btn-secondary  text-light btn-lg" type="button">Suscríbete!</button>
         </div>
       </div>
     </div>
