--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -53,7 +53,7 @@
 
     <!-- NAV BAR FINAL------------------------------------------------------------------------------------------------------------------------->
 
-    <div class="container">
+    <div class="container container-contacto">
         <img src="" alt="">
 
         <div> </div>
