--- a/PAGES/tools.html
+++ b/PAGES/tools.html
@@ -66,7 +66,7 @@
     </div>
 
 
-    <div class="row">
+    <div class="row tools">
       <div class="col-lg-6">
         <img src="../assets/desktop.jpg" alt="" class="img-thumbnail">
       </div>
