--- a/PAGES/portafolio.html
+++ b/PAGES/portafolio.html
@@ -65,8 +65,8 @@
         <div class="card">
           <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/1.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-text">PROYECTO 1</h4>
-            <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <h4 class="card-text">IN MY FEELINGS</h4>
+            <p class="card-text text-secondary">Hecho con:</p>
 
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
@@ -74,8 +74,9 @@
             <i class="sass fa-brands fa-sass"></i>
 
 
-            <p class="card-text mt-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum harum nam
-              asperiores.
+            <p class="card-text mt-2">
+              Una app de diario y prueba que selecciona musica en
+              función de su estado de ánimo.
             </p>
 
             <button class='boton--portafolio'>Demo</button>
@@ -87,8 +88,8 @@
         <div class="card">
           <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/2.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-text">PROYECTO 2</h4>
-            <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <h4 class="card-text">Habit Tracker</h4>
+            <p class="card-text text-secondary">Hecho con:</p>
 
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
@@ -109,8 +110,8 @@
         <div class="card">
           <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/3.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-text">PROYECTO 3</h4>
-            <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <h4 class="card-text">WHAT TO DO</h4>
+            <p class="card-text text-secondary">Hecho con:</p>
 
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
@@ -118,8 +119,8 @@
             <i class="sass fa-brands fa-sass"></i>
 
 
-            <p class="card-text mt-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum harum nam
-              asperiores.
+            <p class="card-text mt-2"> ¿Cuál es el plan?
+              Una aplicación de eventos que captura eventos de entretenimiento.
             </p>
 
             <button class='boton--portafolio'>Demo</button>
@@ -131,8 +132,8 @@
         <div class="card">
           <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/4.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-text">PROYECTO 4</h4>
-            <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <h4 class="card-text">Into The Void</h4>
+            <p class="card-text text-secondary">Hecho con:</p>
 
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
@@ -140,8 +141,8 @@
             <i class="sass fa-brands fa-sass"></i>
 
 
-            <p class="card-text mt-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum harum nam
-              asperiores.
+            <p class="card-text mt-2"> ¡Una aplicación de minijuego javascript en la que esquivas asteroides con tu
+              cohete!
             </p>
 
             <button class='boton--portafolio'>Demo</button>
@@ -153,16 +154,16 @@
         <div class="card">
           <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/5.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-text">PROYECTO 5</h4>
-            <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <h4 class="card-text">RIDE THE WAVE</h4>
+            <p class="card-text text-secondary">Hecho con:</p>
 
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
             <i class="js fa-brands fa-js"></i>
             <i class="sass fa-brands fa-sass"></i>
 
-            <p class="card-text mt-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum harum nam
-              asperiores.
+            <p class="card-text mt-2"> ¿Cuál es tu estética?
+              Una app que elije tu estilo del dia en base a un questionario.
             </p>
             <button class='boton--portafolio'>Demo</button>
           </div>
@@ -173,8 +174,8 @@
         <div class="card">
           <img class="bd-placeholder-img  img-thumbnail card-img-top" src="../assets/6.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-text">PROYECTO 6</h4>
-            <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <h4 class="card-text">EVERYDAY LIFE WITH HANNAH</h4>
+            <p class="card-text text-secondary">Hecho con:</p>
 
             <i class="html fa-brands fa-html5"></i>
             <i class="css fa-brands fa-css3"></i>
@@ -182,9 +183,7 @@
             <i class="sass fa-brands fa-sass"></i>
 
 
-            <p class="card-text mt-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum harum nam
-              asperiores.
-            </p>
+            <p class="card-text mt-2"> Conversión de PSD (Multi-páginas), Responsive.
 
             <button class='boton--portafolio'>Demo</button>
           </div>
