--- a/PAGES/servicios.html
+++ b/PAGES/servicios.html
@@ -65,11 +65,9 @@
 
         <div class="col-md text-center p-5 order-2 order-md-1">
           <h1 class="titulo">¿Tienes un proyecto <span>proyecto</span> en mente?</h1>
-          <p class="lead my-4 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet minima
-            tempora expedita? Ullam
-            sed totam voluptates ea adipisci distinctio laborum?</p>
-          <button class="boton" type="button" data-bs-toggle="modal"
-            data-bs-target="#modal">¡Contactanos!</button>
+          <p class="lead my-4 ">Si alguna vez quieres tomar un café/bubble tea (virtualmente) o simplemente quieres una
+            charla rápida, ¡puedes encontrarme en las redes sociales o puedes enviarme un mensaje aquí!</p>
+          <button class="boton" type="button" data-bs-toggle="modal" data-bs-target="#modal">¡Contactanos!</button>
         </div>
 
       </div>
@@ -121,8 +119,10 @@
       <!-- <div class='banner-img'></div> -->
       <img src='../assets/branding.jpg' alt='profile image' class="img-servicios">
       <h1 class="name">BRANDING</h1>
-      <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ducimus. Architecto
-        error nobis exercitationem facilis ullam. Obcaecati itaque hic maiores.</p>
+      <p class="description">El Branding es el proceso de investigar, desarrollar y aplicar una característica
+        distintiva o
+        un conjunto de características a su organización para que los consumidores puedan comenzar a asociar su marca
+        con sus productos o servicios.</p>
       <button id="modal-branding" class='btn-servicios' type="button" data-bs-toggle="modal"
         data-bs-target="#modal">Quieres
         saber mas?</button>
@@ -132,8 +132,9 @@
       <div class='banner-img'></div>
       <img src='../assets/front_end.jpg' alt='profile image' class="img-servicios">
       <h1 class="name">FRONTEND</h1>
-      <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ducimus. Architecto
-        error nobis exercitationem facilis ullam. Obcaecati itaque hic maiores.</p>
+      <p class="description">El desarrollo web front-end, también conocido como desarrollo web, es la
+        práctica de producir HTML, CSS y JavaScript para un sitio web o una aplicación web para que un usuario pueda
+        verlos e interactuar con ellos directamente. </p>
       <button id="modal-frontend" class='btn-servicios' type="button" data-bs-toggle="modal"
         data-bs-target="#modal">Quieres
         saber mas?</button>
@@ -143,8 +144,9 @@
       <div class='banner-img'></div>
       <img src='../assets/UX.jpg' alt='profile image' class="img-servicios">
       <h1 class="name">DISEÑO UX/UI</h1>
-      <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ducimus. Architecto
-        error nobis exercitationem facilis ullam. Obcaecati itaque hic maiores.</p>
+      <p class="description">El diseñador UX se ocupa de la situación y del problema en general. El diseñador UI se
+        centra en los detalles, pule la interfaz a fondo y da los toques finales,
+        responsables de hacer que la experiencia de usuario sea lo mejor posible.</p>
       <button id="modal-uxui" class='btn-servicios' type="button" data-bs-toggle="modal" data-bs-target="#modal">Quieres
         saber mas?</button>
     </div>
@@ -153,8 +155,9 @@
       <div class='banner-img'></div>
       <img src='../assets/mas.jpg' alt='profile image' class="img-servicios">
       <h1 class="name">MAS</h1>
-      <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ducimus. Architecto
-        error nobis exercitationem facilis ullam. Obcaecati itaque hic maiores.</p>
+      <p class="description">Seguimos trabajando duro para aprender nuevas tecnologias y el uso de las herramientas
+        necesarias para brindar un servicio de alta calidad y acorde con las necesidades del mercado actual. Suscribete
+        al newsletter para saber mas!</p>
       <button id="modal-mas" class='btn-servicios' type="button" data-bs-toggle="modal" data-bs-target="#modal">Quieres
         saber mas?</button>
     </div>
