--- a/PAGES/tools.html
+++ b/PAGES/tools.html
@@ -55,24 +55,21 @@
 
   <div class="container">
     <div class="jumbotron bg-light">
-      <h1 class="display-3 text-center text-info">TOOLKIT</h1>
-      <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et minus beatae iure dolorem
-        exercitationem praesentium quibusdam aliquam, vero ipsum accusantium consectetur inventore vel assumenda libero
-        at quo blanditiis sit. Eius ipsum consequuntur consequatur, excepturi itaque quibusdam explicabo neque libero a
-        hic ullam laudantium, natus et expedita illum aperiam dolores ea architecto delectus ratione repellat cum in
-        ipsam quam. Harum eos rem officia laborum, ducimus id blanditiis inventore, cupiditate labore illo enim modi
-        ratione temporibus officiis totam quos error! Assumenda cupiditate possimus quae veniam nihil aliquam suscipit,
-        aliquid impedit earum sit natus nesciunt ipsa quos minus porro, itaque officiis amet fugiat.</p>
+      <h1 class="display-3 text-center">Herramientas con las que trabajo</h1>
+      <p class="text-muted">Soy una desarrolladora y diseñadora multidisciplinaria apasionado por crear experiencias de
+        usuario atractivas y entretenidas. Estoy emocionado de dar el salto y continuar perfeccionando mis habilidades
+        con la compañía
+        adecuada.</p>
     </div>
 
 
     <div class="row tools">
       <div class="col-lg-6">
-        <img src="../assets/desktop.jpg" alt="" class="img-thumbnail">
+        <img src="../assets/c.jpg" alt="" class="img-thumbnail">
       </div>
 
       <div class="col-lg-6">
-        <h2 class="display-5 text-info my-4">Aminta S. Largaespada</h2>
+        <h2 class="display-5 my-4">Caja de herramientas</h2>
 
         <div class="mb 3">
           <label>HTML & CSS</label>
