--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- META TAG / SEO -->
+    <meta name="descripcion"
+        content="Alma Digital ofrece servicios digitales de desarrollo de sitios y aplicaciones web para emprendedores">
+
     <title>INDEX</title>
 
     <!--BOOTSTRAP & CSS INCICIO----------------------------------------------------------------------------------------->
@@ -61,15 +65,16 @@
                     <img src="./assets/B.webp" class="img-fluid" alt="">
                 </div>
                 <div class="col-md text-center p-5 order-1 order-md-2">
-                    <h1>Hola<span>,</span> soy Aminta<span>!</span></h1>
-                    <h4>WEB DEVELOPER</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, tenetur.
-                        Possimus modi magnam sequi quos! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Laboriosam nesciunt ullam tempore
-                        cumque, aperiam cum nostrum exercitationem quaerat enim quos voluptatem fugit eligendi
-                        consectetur numquam iusto nam itaque autem adipisci! Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Modi illum recusandae, voluptatum explicabo expedita veritatis magni debitis
-                        possimus ipsum ab?</p>
+                    <h1>Hola<span>,</span> esto es Alma Digital<span>!</span></h1>
+                    <h4>DESARROLLO WEB</h4>
+                    <p>
+                        ALMA Digital es un servicio de creacion de paginas o aplicaciones web para PYMES.
+                        Soy una soñadora que en todo lo que hace le pone un pedacito de su alma para que cada proyecto
+                        tenga vida propia.
+                        Todos somos diferentes y soñamos diferentes y por eso me apasiona escuchar las historias que hay
+                        detras de cada emprendimiento.
+                        Quiero escucharte, conocerte y ayudarte a desarrollar tus sueños para que estos se conviertan en
+                        tu REALIDAD!</p>
                     <button class="boton" href="./pages/contacto.html">CONTACTAME</button>
                 </div>
             </div>
@@ -81,11 +86,9 @@
             <div class="row align-items-center justify-content-between">
                 <div class="col-md text-center p-5 ">
                     <h2>Quieres saber mas de mi?</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, tenetur.
-                        Possimus modi magnam sequi quos!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nesciunt ullam tempore
-                        cumque, aperiam cum nostrum exercitationem quaerat enim quos voluptatem fugit eligendi
-                        consectetur numquam iusto nam itaque autem adipisci!</p>
+                    <p>Mucho gusto, mi nombre es Aminta y soy desarrolladora web y me entusiasman los desafios nuevos
+                        que me retan a crecer y aprender! Si te gustaria saber mas acerca de mi experiencia puedes
+                        descargar mi CV o ver mi portafolio! Espero con ansias recibir un mensaje tuyo!</p>
                     <button class="boton">Curriculum <i class="fa-solid fa-download"></i></button>
                 </div>
                 <div class="col-md ">
