--- a/PAGES/portafolio.html
+++ b/PAGES/portafolio.html
@@ -6,6 +6,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- META TAG / SEO -->
+  <meta name="descripcion"
+    content="Alma Digital ofrece servicios digitales de desarrollo de sitios y aplicaciones web para emprendedores">
+  <meta name="keywords" content="HTML, JS, CSS, SASS, WEB, DESARROLLO WEB, DISEÑO, UX/UI, BRANDING, SITIO WEB">
+
   <title>INDEX</title>
 
   <!--BOOTSTRAP & CSS INCICIO----------------------------------------------------------------------------------------->
@@ -185,7 +190,7 @@
 
             <p class="card-text mt-2"> Conversión de PSD (Multi-páginas), Responsive.
 
-            <button class='boton--portafolio'>Demo</button>
+              <button class='boton--portafolio'>Demo</button>
           </div>
         </div>
       </div>
