--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- META TAG / SEO -->
     <meta name="descripcion"
         content="Alma Digital ofrece servicios digitales de desarrollo de sitios y aplicaciones web para emprendedores">
+    <meta name="keywords" content="HTML, JS, CSS, SASS, WEB, DESARROLLO WEB, DISEÑO, UX/UI, BRANDING, SITIO WEB">
 
     <title>INDEX</title>
 
