--- a/PAGES/tools.html
+++ b/PAGES/tools.html
@@ -58,7 +58,96 @@
 
   <!-- NAV BAR FINAL------------------------------------------------------------------------------------------------------------------------->
 
-  <div class="container">
+
+
+  <div class="skills">
+    <div class="container card-tool">
+      <div class="text">
+        <h2>MIS <span>HERRAMIENTAS</span></h2>
+        <p>Estas son algunas de las habilidades que poseo y herramientas tecnologicas que conozco y voy mejorando poco a poco en el uso de estas.</p>
+      </div>
+
+      <div class="skill-card">
+        <div class="card">
+          <i class="fa-solid fa-people-group"></i>
+          <h4>PRODUCT MANAGER</h4>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
+        </div>
+
+        <div class="card">
+          <i class="fa-brands fa-figma"></i>
+          <h4>UX/UI</h4>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
+        </div>
+
+        <div class="card">
+          <i class="fa-solid fa-hand-holding-heart"></i>
+          <h4>BRANDING</h4>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
+        </div>
+
+        <div class="card">
+          <i class="fa-brands fa-github"></i>
+          <h4>GITHUB</h4>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
+        </div>
+
+        <div class="card">
+          <i class="fa-solid fa-mobile-screen-button"></i>
+          <h4>RESPONSIVE DESIGN</h4>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
+        </div>
+
+        <!--  -->
+
+        <div class="card">
+          <i class="fa-brands fa-html5"></i>
+          <h4>HTML</h4>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
+        </div>
+
+        <div class="card">
+          <i class="fa-brands fa-css3"></i>
+          <h4>CSS</h4>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
+        </div>
+
+        <div class="card">
+          <i class="fa-brands fa-sass"></i>
+          <h4>SASS</h4>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
+        </div>
+
+        <div class="card">
+          <i class="fa-brands fa-square-js"></i>
+          <h4>JAVASCRIPT</h4>
+          <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!------------------------------------------------------------------------------------------------------------------------------------->
+
+  <!-- <div class="container">
     <div class="jumbotron bg-light">
       <h1 class="display-3 text-center">Herramientas con las que trabajo</h1>
       <p class="text-muted">Soy una desarrolladora y diseñadora multidisciplinaria apasionado por crear experiencias de
@@ -109,7 +198,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!--------------------------------------------------------------------------------------------------------------------------->
 
