--- a/PAGES/tools.html
+++ b/PAGES/tools.html
@@ -69,7 +69,7 @@
 
       <div class="skill-card">
         <div class="card">
-          <i class="fa-solid fa-people-group"></i>
+          <i class="fa-solid fa-face-smile-beam"></i>
           <h4>PRODUCT MANAGER</h4>
           <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid, ipsam.</p> -->
         </div>
