--- a/index.html
+++ b/index.html
@@ -65,9 +65,32 @@
                 <div class="col-md order-2 order-md-1">
                     <img src="./assets/B.webp" class="img-fluid" alt="">
                 </div>
-                <div class="col-md text-center p-5 order-1 order-md-2">
-                    <h1>Hola<span>,</span> esto es Alma Digital<span>!</span></h1>
-                    <h4>DESARROLLO WEB</h4>
+                <div class="typewriter col-md align-items-center p-5 order-1 order-md-2">
+                    <!-- <h1>Hola<span>,</span> esto es Alma Digital<span>!</span></h1> -->
+                    <!-- <h4>DESARROLLO WEB</h4> -->
+                    <!--  -->
+
+
+                    <!-- <h1 class="portafolio">
+                        <span class="animacion">always be</span>
+                        <div class="message">
+                            <div class="word1">close</div>
+                            <div class="word2">code</div>
+                            <div class="word3">creating</div>
+                            <div class="word3">creating</div>
+                        </div>
+                    </h1> -->
+
+                    <div class="typewriter">
+                        <h1>Hola<span>,</span> esto es Alma Digital<span>!</span></h1>
+
+                        <p id="line-1">Soy web developer independiente <span>y algo mas</span> en Miami, FL.</p>
+                        <!-- <p id="line-2">Send me a message to discuss your project.</p> -->
+                       
+                    </div>
+
+
+                    <!--  -->
                     <p>
                         ALMA Digital es un servicio de creacion de paginas o aplicaciones web para PYMES.
                         Soy una soñadora que en todo lo que hace le pone un pedacito de su alma para que cada proyecto
