--- a/PAGES/portafolio.html
+++ b/PAGES/portafolio.html
@@ -188,7 +188,7 @@
             <i class="sass fa-brands fa-sass"></i>
 
 
-            <p class="card-text mt-2"> Conversión de PSD (Multi-páginas), Responsive.
+            <p class="card-text mt-2"> Conversión de PSD, Responsive.</p>
 
               <button class='boton--portafolio'>Demo</button>
           </div>
